2008-03-16  Alberto Ruiz <aruiz@gnome.org>

	* modules/engines/ms-windows/Theme/gtk-2.0/gtkrc: more descriptive
	style names for the ComboBox thickness style

2008-03-16  Alberto Ruiz <aruiz@gnome.org>

	* modules/engines/ms-windows/Theme/gtk-2.0/gtkrc:
	* modules/engines/ms-windows/msw_style.c (draw_box) (draw_arrow)
	(combo_box_draw_arrow) (setup_msw_rc_style): draw box does more
	intelligent separation for the xp theming engine and the classic
	theme while drawing the GtkComboBox button.  combobox_draw_arrow
	is not used anymore, commented.  The style has been updated to fix
	border/thickness glitches in the combobox according to the fixes
	commited regarding bug #521442. (bug #461805)

2008-03-16  Alberto Ruiz <aruiz@gnome.org>

	* gtk/gtkcombobox.c: (gtk_combo_box_size_allocate) The child is
	now aware of both the combobox and frame (if has-frame is set)
	thickness and border. (bug #521442)

2008-03-15  Andre Klapper  <a9016009@gmx.de>

	* configure.in: Added "si" to ALL_LINGUAS.

2008-03-15  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtktreeview.c (gtk_tree_view_ensure_interactive_directory):
	Set window type hint on the search popup.  (#522279, Danny Baumann)

2008-03-15  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkimcontextsimple.c: Emit preedit_start/_end as
	appropriate.  (#521934, Huang Peng)

2008-03-14  Michael Natterer  <mitch@imendio.com>

	* gdk/gdkspawn.h
	* gtk/gtkbuilderprivate.h
	* gtk/gtkfilechoosersettings.c
	* gtk/gtksearchenginesimple.c
	* gtk/tests/liststore.c
	* gtk/tests/treestore.c: remove single-file includes of GLib
	headers or replace them by <glib.h> where needed.

2008-03-14  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkadjustment.c: coding style cleanup.

	(gtk_adjustment_set_property): no need to call g_object_notify()
	on the set properties.

	Implement GObject::dispatch_properties_changed() and make sure we
	emit "changed" when anything but the "value" property changes.

2008-03-14  Tor Lillqvist  <tml@novell.com>
